[package]
name = "renderer"
version = "0.0.1"
authors = ["Nathan Levesque <rhysyngsun@gmail.com>"]

[[bin]]
name = "renderer-bin"
path = "src/bin/renderer.rs"
test = false
doc = false
bench = false

[dependencies]
docopt = "~0.6.0"
rustc-serialize = "~0.3.0"
regex = "~0.1.0"
regex_macros = "~0.1.0"

[dependencies.nom]
version = "1.1.0"
features = ["regexp_macros"]

[dev_dependencies]
quickcheck = "~0.2.0"
quickcheck_macros = "~0.2.0"
