[package]
name = "renderer"
version = "0.0.1"
authors = ["Nathan Levesque <rhysyngsun@gmail.com>"]

[[bin]]
name = "renderer-bin"
path = "src/bin/renderer.rs"
test = false
doc = false
bench = false

[features]
default = []

[dependencies]
docopt = "~0.6.0"
rustc-serialize = "~0.3.0"
regex = "~0.2.0"
# arrayfire = "3.3.1"
num = "0.1.34"
nom = "^2.1"
clippy = {version = "*", optional = true}

[build-dependencies]
regex_macros = "~0.1.0"

[dev_dependencies]
quickcheck = "~0.4.0"
quickcheck_macros = { git = "https://github.com/BurntSushi/quickcheck" }
